- weitere Erganezungen von carolin
git-svn-id: https://svn.lug-jena.de/uni-skripte@1122 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -1201,11 +1201,12 @@ Es wird zwei wichtige Spezialfälle geben:
 \end{enumerate}
 
 
-\section{Messbare Funktionen}
+\section{Messbare Funktionen (Abbildungen)}
 
 Im folgenden gilt immer, dass $[\Omega,\CF,\mu]$ ein Maßraum  und
 $[X,\FX]$ ein messbarer Raum ist. Wir betrachten $f\colon\Omega\rightarrow
-X$ und definieren $\fmineins(A)\colon=\{\omega\in\Omega| f(\omega)\in
+X$ und definieren das \highl{Urbild} einer Menge:
+$\fmineins(A)\colon=\{\omega\in\Omega| f(\omega)\in
 A\}$ mit $A\subseteq X$. Dies ist nicht zu verwechseln mit inversen
 Abbildungen.\footnote{Falls es eine inverse Abbildung gibt, gilt
   $\fmineins (A)=\{\fmineins (x)|x\in A\}$}
@@ -1214,9 +1215,11 @@ Abbildungen.\footnote{Falls es eine inverse Abbildung gibt, gilt
   Es gelten
   \begin{enumerate}[a)]
   \item $\fmineins(\emptyset)=\emptyset, \fmineins(X)=\Omega$
-  \item $\fmineins(A^c)=(\fmineins(A))^c\quad (\forall A\subseteq X)$
+  \item $\fmineins(A^c)=(\fmineins(A))^c\quad (\forall A\subseteq X)$, dabei
+    ist $\fmineins(A^c)$ das Komplement in $X$ und $(\fmineins(A))^c$ das
+    Komplement in $\Omega$.
   \item $\fmineins(\bigcup_{i\in I} A_i)= \bigcup_{i\in I} \fmineins
-    (A_i)$
+    (A_i)\quad (A_{i}\subseteq X, i\in I)$
   \item $\fmineins(\bigcap_{i\in I} A_i)= \bigcap_{i\in I} \fmineins
     (A_i)$ (Für beide Fälle gilt, dass die $(A_i)_{i\in I}$ Folgen von
     Teilmengen aus $X$ sind.)
@@ -1229,7 +1232,8 @@ Abbildungen.\footnote{Falls es eine inverse Abbildung gibt, gilt
     \fmineins (X)=\Omega$
   \item $\omega\in\fmineins(A^c)\Leftrightarrow f(\omega)\in A^c
     \Leftrightarrow \neg f(\omega)\in A\Leftrightarrow \neg \omega\in
-    \fmineins (A)\Leftrightarrow \omega\in (\fmineins(A))^c
+    \fmineins (A)\Leftrightarrow \omega\notin\fmineins(A)\Leftrightarrow
+    \omega\in (\fmineins(A))^c 
     \Rightarrow \fmineins(A^c)=(\fmineins(A))^c$
   \item selbst in Übung
    \item selbst in Übung
@@ -1301,7 +1305,9 @@ Abbildungen.\footnote{Falls es eine inverse Abbildung gibt, gilt
     zeigen ist, ob $f$ $(\R,\FB)$-messbar ist. Dies ist genau dann der Fall,
     wenn ein $c\in\R$ mit $f(\omega)=c$ existiert \dots 
   \item Sei $\CF=\FP(\Omega)$. Dann ist jede Abbildung
-    $f\colon\Omega\rightarrow X$ messbar.
+    $f\colon\Omega\rightarrow X$ messbar. $\CF=\FP(\Omega)\Rightarrow
+    \fmineins(A)\in\CF\ (A\subseteq X)$. F"ur beliebige $\FX$ ist $f$
+    $(\FP(\Omega),\FX)$"~messbar.
   \end{enumerate}
 \end{beispiel}
 
@@ -1358,8 +1364,8 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
 
 \begin{satz}
 \label{satz:verkn-messbar-fkt-214}
-  Seien $f,g$ messbare Funktionen. Dann sind die Funktionen $f+g$ und
-  $fg$ ebenfalls messbare Funktionen.
+  Seien $f,g\colon[\Omega,\CF]\rightarrow[\R,\FB]$ messbare Funktionen. Dann
+  sind die Funktionen $f+g$ und $fg$ ebenfalls messbare Funktionen.
 \begin{proof}
   Seien $f,g\colon\Omega\rightarrow\R^2$. Diese Funktionen werden wie folgt
   umgewandelt: $h\colon=[f,g]\colon\Omega\rightarrow\R^2, [f,g](\omega)=
@@ -1378,7 +1384,8 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
   g^{-1}(B))\in\CF$) gilt für alle $A,B\in\FB\colon \hmineins(A\times B)\in
   \CF$. Und es folgt weiter $\sigma(\{A\times B|A\in\FB, B\in\FB\}) =
   \FB_2$. Damit ist $h$ messbar.\\
-  Wir setzen nun $a(x_1,x_2)=x_1+x_2, b(x_1,x_2)=x_1x_2$. Also ist
+  Wir setzen nun $a(x_1,x_2)=x_1+x_2, b(x_1,x_2)=x_1x_2,
+  a,b\colon\R^{2}\rightarrow\R$, stetig. Also ist
   $f+g=a\circ h$ und $fg=b\circ h$. Da $a,b$ stetig sind, sind sie
   auch messbar und nach \autoref{satz:verkn-messbar212} ist die
   Verknüpfung beider Abbildungen wieder messbar.
@@ -1386,7 +1393,8 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
 \end{satz}
 
 \begin{satz}
-  Sei $(f_i)_{i\in I}$ eine abzählbare Familie messbarer Funktionen,
+  Sei $(f_i)_{i\in I}\colon[\Omega,\CF]\rightarrow[\R,\FB]$ eine abzählbare
+  Familie messbarer Funktionen,
   so dass die Mengen $\{\omega\in\Omega|\sup f_i(\omega)<+\infty\}=
   \Omega$ bzw. $\{\omega\in\Omega|\inf f_i(\omega)<-\infty\}= \Omega$
   sind. Dann ist $\sup f_i$ bzw. $\inf f_i$
@@ -1406,21 +1414,26 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
     f(x)\leq x\}=\bigcap_{i\in I} \fmineins_i ((-\infty,x))\in\CF$
   \item Sei $f\colon=\inf f_1\Rightarrow f\colon\Omega\rightarrow\R$. Wegen
     \autoref{satz:messb-eigensch213} (4) genügt es zu zeigen, dass
-    $\{\omega\in\Omega | f(\omega)\geq x\}\in\CF$. Dazu $f(\omega)\geq
+    $\bigcap_{i\in I}\{\omega| f_{i}(\omega)\geq x\}= \{\omega\in\Omega |
+    f(\omega)\geq x\}\in\CF$. Dazu $f(\omega)\geq
     x\Leftrightarrow f_i(\omega)\geq x (i\in I)\Rightarrow
     \{\omega\in\Omega | f(\omega)\geq x\}=\bigcup_{i\in I}
-    \{\underbrace{\omega\in\Omega | f_i(\omega)\geq x}_{\fmineins_i
-      ((x,+\infty))\in\CF}\}$
+    \{\omega\in\Omega | f_i(\omega)\geq x\}=\bigcup_{i\in I} \{\fmineins_i
+      ([x,+\infty))\in\FB\}\Rightarrow \{\omega\in\Omega| \inf_{i}
+    f_{i}(\omega) \geq x\}\in\FB$ f"ur $x\in\R$. Dann folgt nach
+    \autoref{satz:messb-eigensch213} Punkt 4, dass $\inf_{i} f_{i}$ messbar
+    ist.
   \end{enumerate}
 \end{proof}
 \end{satz}
 
 \begin{satz}
-  Sei $f$ eine messbare Funktion. Dann gelten:
+  Sei $f$ eine messbare Funktion ($f\colon[\Omega,\CF]\rightarrow [\R,\FB]$).
+  Dann gelten:
   \begin{enumerate}[(1)]
   \item $af+b$ ist messbar. $(a,b\in\R)$
-  \item $f^+\colon=\max (f,0)$ ist messbar.
-  \item $f^-\colon=\min (f,0)$ ist messbar.
+  \item $f^+\colon=\max (f,0)$ ist messbar und der positive Ast der Funktion.
+  \item $f^-\colon=\min (f,0)$ ist messbar und der negative Ast der Funktion.
   \item $|f|$ ist messbar.
   \end{enumerate}
 \begin{proof}
@@ -1428,7 +1441,8 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
   \item Wir wissen, dass "`konstante"' Funktionen immer messbar
     sind. Damit wie auch nach \autoref{satz:verkn-messbar-fkt-214}
     gilt die Behauptung.
-  \item Wir setzen $f_1=f, f_2=0$. Beide Funktionen sind messbar und
+  \item Wir setzen $f_1=f, f_2=0$. Dann folgt, dass $f^{+}=\max(f_{1},
+    f_{2})$. Beide Funktionen sind messbar und
     wegen des obigen Satzes ist auch $\sup f_i=f^+$ messbar.
   \item Beweis erfolgt analog zu (2).
   \item $|f|=f^+-f^-=f^++(-1)f^-\Rightarrow$ messbar.
@@ -1448,7 +1462,8 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
 
 \begin{satz}
 \label{satz:indimess-218}
-  Sei $A\subseteq\Omega$. Die Indikatorfunktion $\chi_A$ ist genau
+  Sei $A\subseteq\Omega$. Die Indikatorfunktion $\chi_A(\omega)=
+  \begin{cases}1 & \omega\in A\\ 0 & \omega\notin A\end{cases}$ ist genau
   dann messbar, wenn $A\in\CF$.
 \begin{proof}
   Es ist $\chi_A^{-1}(B)$ zu prüfen:
@@ -1459,9 +1474,14 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
     A^c & 1\notin B\wedge 0\in B\\
     \Omega & 1\in B\wedge 0\in B
   \end{cases}\]
-  Wegen $\emptyset, \Omega\in\CF$ erhalten wir: $\chi_A^{-1}(B)\in\CF
-  \Leftrightarrow \chi_A^{-1}(\{0\}),\chi_A^{-1}(\{1\})\in\CF
-  \Leftrightarrow A^c,A\in\CF\Leftrightarrow A\in\CF$
+  F"ur die Gleichheit m"ussen wir beide Richtungen zeigen: Sei $\chi_{A}$
+  messbar. Dann ist $\{1\}\in\FB\Rightarrow\chi_{A}^{-1}(\{1\})= A\in \CF$.\\
+  Sei $A\in\CF$. Dann ist zu zeigen, dass $\chi_{A}$ messbar ist, d.\,h.
+  $\chi_{A}^{-1}(B)\in\CF$ f"ur $B\in\FB$. Es folgt, dass $\chi_{A}^{-1}(B)\in
+  \{\emptyset, \Omega, A,A^{c}\}$ und somit gen"ugt es zu zeigen, dass
+  $\{\emptyset, \Omega, A,A^{c}\}\subseteq\CF$ ist. Wir wissen, dass
+  $\emptyset, \Omega\in\CF$ sind. Weiterhin ist nach Voraussetzung
+  $A\in\CF\Rightarrow A^{c}\in\CF$ und es folgt die Behauptung.
 \end{proof}
 \end{satz}
 
@@ -1483,7 +1503,8 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
     $\sigma$-Algebren $\CF$ und $\FB$.
   \item Einfache Funktionen sind messbar. Denn nach dem vorhergehenden
     Satz folgt, dass $\chiai$ messbar sind und die Linearkombinationen
-    messbarer Funktionen sind wieder messbar.
+    messbarer Funktionen sind wieder messbar. (Zum Beweis siehe
+    \autoref{satz:verkn-messbar-fkt-214} und \autoref{satz:indimess-218}).
   \end{enumerate}
 \end{remark}
 
@@ -1509,7 +1530,8 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
       folgt aus einfach auch die Messbarkeit. Auch die zweite
       Bedingung geht sofort aus der Definition hervor.
     \item["`$\Leftarrow$"'] Setzen $\{b_1,\ldots,b_n\}=\{f(\omega)|
-      \omega\in\Omega\}$ und $B_i=\fmineins(\{b_i\})$. Damit folgt
+      \omega\in\Omega\}$ und $B_i=\fmineins(\{b_i\})$ f"ur $i=1,\dotsc,n$.
+      Damit folgt
       $\{b_i\}\in\FB$. Wegen der Messbarkeit gilt weiter $B_i=
       \fmineins(\{b_i\})\in\CF$. Es ist trivial, dass $B_i\cap B_j=
       \emptyset$ und klar, dass $f=\sum_{i=1}^n b_i\chi_{B_i}$. Daraus
@@ -1526,11 +1548,18 @@ bezeichnen $(\CF,\FB)$-messbar als messbar.
   mit $f_n\leq f_{n+1}$ und $f=\limn f_n (f_n \uparrow f)$
 \begin{proof}
   Der Beweis erfolgt konstruktiv, d.\,h. man konstruiert eine spezielle
-  Folge $(f_n)_{n=1}^\infty$:
-  \[f_n\colon=\sum_{i=0}^{4^n-1} \frac{i}{2^n}
+  Folge $(f_n)_{n=1}^\infty$ mit den Eigenschaften aus dem Satz:
+  \begin{align*}
+    f_n &\colon=\sum_{i=0}^{4^n-1} \frac{i}{2^n}
   \chi_{\fmineins([\frac{i}{2^n}, \frac{i+1}{2^n}))} +2^n
-  \chi_{\fmineins ([2^n,-\infty))}\]
-
+  \chi_{\fmineins ([2^n,+\infty))}\\
+    f_{n}(\omega) &\colon=
+       \begin{cases}
+	 \nicefrac{i}{2^{n}} & \nicefrac{i}{2^{n}} \leq f(\omega)<\frac{i+1}{2^{n}}\\
+	 2^{n} & f(\omega)\geq2^{n}
+	 \end{cases} \quad i=0,\dotsc,4^{n}-1
+  \end{align*}
+  
   \begin{pspicture}(8,6)
     \psaxes[labels=none,tickstyle=bottom,ticks=y](7,5)
     \psbezier(0,0)(1,0.5)(2,1.5)(3,3.7)(5,4)(7,4.5)
@@ -1741,7 +1770,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f\colon
 
 \begin{beispiel}
   \begin{enumerate}
-  \item Sei $\mu=\delta_{\omega_0}$ und ein $\omega_0\in\Omega$
+  \item Sei $\mu=\delta_{\omega_0}$ und ein festes $\omega_0\in\Omega$
     gegeben. Dann ist jede messbare Funktion $f$ $\mu$-integrierbar
     und es gilt: $\int fd\mu=\int fd\delta_{\omega_0}=f(\omega_0)$
   \item Wir betrachten die Reihe $\sum_{k=0}^m a_k$. Dabei ist auch
@@ -1800,6 +1829,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f\colon
     \caption{Untere Darbouxsche Summen}
   \end{figure}
 
+  \todo{Erg"anzung von Carolin einf"ugen}
   \begin{align*}
     z_{k+1}^{(n)}-z_k^{(n)} &=\frac{b-a}{2^n} f_n(x)=0\quad (x\notin[a,b])\\
     b_{k}^{(n)} &\colon= \inf_{z_{k}^{(n)}\leq x< z_{l+1}^{(n)}}\\
@@ -1842,7 +1872,8 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f\colon
   \item Der \autoref{satz:riemann-222} ist ausdehnbar auf die Fälle
     $a=-\infty, b=\infty$. Dabei ist die Forderung, dass $f$ auf $[a,b]$
     $\ell$-integrierbar ist, notwendig. Das heißt nun aber
-    $\int_{a}^{b}\abs{f(x)}\,dx<+\infty$.
+    $\int_{a}^{b}\abs{f(x)}\,dx<+\infty$, d.\,h. $\int_{a}^{b}
+    \abs{f(x)}\,dx<+\infty$.
   \end{enumerate}
 \end{remark}
 
@@ -1850,7 +1881,8 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f\colon
   \label{satz:uebertrsatz-228}
   Seien $[\Omega_1,\CF_1,\mu]$ ein Maßraum, $[\Omega_2,\CF_2]$ ein
   messbarer Raum und weiter $h\colon[\Omega_1,\CF_1]\rightarrow[\Omega_2,\CF_2],
-  f\colon[\Omega_2, \CF_2]\rightarrow[\R,\FB]$, wobei $f$ bezüglich $\mu$
+  f\colon[\Omega_2, \CF_2]\rightarrow[\R,\FB]$, wobei $f$ bezüglich $\mu\circ
+  h^{-1}$
   integrierbar ist. Dann ist $f\circ h \colon\Omega_1\rightarrow\R$
   bezüglich $\mu$ integrierbar und es gilt:
   \begin{gather}
@@ -1863,7 +1895,8 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f\colon
   \item Sei $f=\chi_A$ mit  $(A\in\CF_2)$ und damit messbar. Wir betrachten
     die Verknüpfung $f\circ h(\omega)=\chi_A(h(\omega))$. Es ist klar, dass
     $\chi_A\circ h$ eine Indikatorfunktion auf $\Omega_1$ sein muss, d.\,h.
-    $\exists B\subseteq\Omega_1$ mit $\chi_A\circ h=\chi_B$\\
+    $\exists B\subseteq\Omega_1$ mit $\chi_A\circ h=\chi_B$ und
+    $B=\{\omega\in\Omega_{1}\colon \chi_{A}(h(\omega))=1\}$.\\
     $\chi_B(\omega)=1\Leftrightarrow \chi_A(h(\omega))=1
     \Leftrightarrow h(\omega)\in A\Leftrightarrow w\in\hmineins(A)
     \Rightarrow B=\hmineins(A)\in\CF_1$. Dabei ist
@@ -1912,7 +1945,7 @@ Im folgenden ist immer $\ofmu$ ein Maßraum und wir betrachten $f\colon
 \begin{beispiel}
   \begin{enumerate}
   \item Sei $\mu=\delta_{\omega_0}\Rightarrow f=g\ \mu"~\text{fast-"uberall}\Leftrightarrow
-    f(\omega_0)=g(\omega_0)$
+    f(\omega_0)=g(\omega_0)$ f"ur $\omega_{0}\in\Omega$.
   \item $\ofmu=\rbel, f=\chi_\Q$ Da die rationalen Zahlen abzählbar
     sind, ist klar, dass $\ell(\Q)=0$. Somit ist auch $\chi_\Q\equiv
     0$, da $\ell(\{\omega\in\Omega|\chi_\Q(\omega)\neq 0\})=\ell(\Q)$
