--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -245,7 +245,7 @@
    \item \href{mailto:jimmi_usa2000@yahoo.com}{Kim Muckelbauer
     \texttt{<jimmi\_usa2000@yahoo.com>}} (2007)
    \item \href{mailto:wichti@online.de}{Carolin Rabsahl} (2007)
-   \item \href{mailto:mario-ullrich@gmx.de}{Mario Ulrich} (2007)
+   \item \href{mailto:mario-ullrich@gmx.de}{Mario Ullrich} (2007)
   \end{itemize}
 }
 
