- Beweis zu Markowscher Ungl. korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1134 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -3828,7 +3828,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
   Sei $\xi\geq 0$. Dann ist $\xi(\omega)\geq
   \xi(\omega)\chi_{\{\hat{\omega} | \xi(\hat{\omega})\geq a\}}(\omega)
   \geq a\chi_{\{\hat{\omega} | \xi(\hat{\omega})\geq a\}}(\omega)$. Da
-  das Integral monoton ist, folgt $E\xi= \int\xi(\omega)P(d\omega)$ monoton $=
+  das Integral monoton ist, folgt $E\xi= \int\xi(\omega)P(d\omega)\geq
   \int a\chi_{\{\hat{\omega} | \xi(\hat{\omega})\geq a\}}dP= a\int
   \chi_{\{\hat{\omega} | \xi(\hat{\omega})\geq a\}}dP= a P(\{\hat{\omega}|
   \xi(\hat{\xi})\geq a\})= aP(\text{"`$\xi\geq a$"'})$. 
