--- a/vorlage/skript.ltx
+++ b/vorlage/skript.ltx
@@ -216,7 +216,7 @@
   \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts verfügbar
   sein.
 
-  Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
+  Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die
   \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
