--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -115,7 +115,7 @@
   \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts
   verfügbar sein.
 
-  Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
+  Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die Mailingliste
   \texttt{<skripte@listserv.uni-jena.de>} senden. Weitere Informationen sind
