Komma im Vorwort ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1142 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/engelbert-mass-integral/skript.latex
+++ b/engelbert-mass-integral/skript.latex
@@ -179,7 +179,7 @@
   vom \SVNDate. Eine (mögliche) aktuellere Ausgabe ist auf der Webseite
   des Projekts verfügbar.
 
-  Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
+  Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
   selbst einzupflegen -- einfach eine E-Mail an die
   \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
