--- a/fey-recharch/skript.latex
+++ b/fey-recharch/skript.latex
@@ -152,7 +152,7 @@
   vom \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts
   verfügbar sein.
 
-  Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
+  Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder selbst
   einzupflegen -- einfach eine eMail an die
   \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
