Komma im Vorwort ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1145 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -175,7 +175,7 @@
   vom \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts verfügbar
   sein.
 
-  Jeder ist aufgerufen Verbesserungen, Erweiterungen und
+  Jeder ist aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder selbst
   einzupflegen -- einfach eine E-Mail an die
   \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
